Fixing jumpbar on mobile

--- a/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
+++ b/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
@@ -41,6 +41,7 @@
     overflow: hidden;
     padding: 0 10px;
     align-items: center;
+    justify-content: space-around;
 
     .btn {
         text-decoration: none;
